--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "datatables.net-select-dt": "^1.3.1",
     "dateformat": "^3.0.3",
     "devextreme-react": "^19.2.5",
+    "gh-pages": "^2.2.0",
     "history": "^4.10.1",
     "jqwidgets-framework": "^9.0.0",
     "jszip": "^3.2.2",
